[package]
name = "supercode-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
fs_extra = "1.3.0"
futures = "0.3.31"
rabbitmq-stream-client = "0.8.0"
serde = {version = "1.0.219", features = ["derive"]}
serde_yaml = "0.9.34"
tokio = { version = "1.45.0", features = ["full"] }
uuid = { version = "1.16.0", features = ["v4"] }
